--- a/assets/view/kako-bistrot.html
+++ b/assets/view/kako-bistrot.html
@@ -45,98 +45,81 @@
         </div>
         <div class="about-bistrot">
             <div class="about-content-bistrot">
-                <p>Dans un décor des bistrots du siècle dernier, au cœur du village de Moustiers-Sainte-Marie, une belle ambiance autour d'un verre de vin ou d'une coupe de champagne, à l'écart du tumulte touristique, profitez de votre soirée pour vous décontracter sur la terrasse.
-                </p>
-                <h2>Horaires:</h2>
-                <p>Lundi au Dimanche 17h - 1h</p>
-                <a href="/assets/doc/Menu Kako's Bistrot - Bar à vins et Champagne-1.pdf" target="_blank" class="btn">Voir la carte</a>
-            </div>
-        </div>
-        <section class="bistrot-gallery">
-            <div class="bistrot-carousel carousel-wrap">
-                <div class="carousel">
-                    <button class="carousel__button carousel__button--left is-hidden">
-                        <img src="/assets/img/icons/previous-fill.png" alt="">
-                    </button>
-                    <div class="carousel__track-container">
-                        <ul class="carousel__track">
-                            <li class="carousel__slide current-slide">
-                                <img class="carousel__image" src="/assets/img/bar-bistrot.jpg" alt="">
-                            </li>
-                            <li class="carousel__slide">
-                                <img class="carousel__image" src="/assets/img/etage-bistrot.jpg" alt="">
-                            </li>
-                            <li class="carousel__slide">
-                                <img class="carousel__image" src="/assets/img/Balcon-bistrot.jpg" alt="">
-                            </li>
-                        </ul>
+                <h2>Quand on vous dit « KaKo's » vous pensez à quoi ?</h2>
+                <div class="story-wrapper">
+                    <div class="story-col left-col">
+                        <p>Au bistrot de la ferme rose qui se situe coeur du village de Moustiers-Sainte-Marie</p>
+                        <p>une belle ambiance autour d'un verre de vin ou d'une coupe de champagne, à l'écart du tumulte touristique, profitez de votre soirée pour vous décontracter sur la terrasse.</p>
+                        <p>Dans un beau décor du siècle dernier. L'escalier conçu par Roger Talon, une véritable pièce maîtresse du Musée d'Art Moderne de New York et le bar du 19ème siècle : un comptoir d'étang magnifiquement préservé. </p>
                     </div>
-                    <button class="carousel__button carousel__button--right">
-                        <img src="/assets/img/icons/next-fill.png" alt="">
-                    </button>
-                    <div class="carousel__nav nav-bistrot">
-                        <button class="carousel__indicator current-slide"></button>
-                        <button class="carousel__indicator"></button>
-                        <button class="carousel__indicator"></button>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <article class="bistrot-story">
-            <div class="story-wrapper">
-                <div class="story-col left-col">
-                    <h3>Quand on vous dit « KaKo's » vous pensez à quoi ?</h3>
-                    <p>Au bistrot de la ferme rose qui se situe coeur du village de Moustiers-Sainte-Marie</p>
-                    <p>Dans un beau décor du siècle dernier. L'escalier conçu par Roger Talon, une véritable pièce maîtresse du Musée d'Art Moderne de New York et le bar du 19ème siècle : un comptoir d'étang magnifiquement préservé. </p>
-                </div>
-                <div class="story-col right-col">
-                    <div class="story-carousel carousel-wrap">
-                        <div class="carousel">
-                            <button class="carousel__button carousel__button--left is-hidden">
-                                <img src="/assets/img/icons/previous-fill.png" alt="">
-                            </button>
-                            <div class="carousel__track-container">
-                                <ul class="carousel__track">
-                                    <li class="carousel__slide current-slide">
-                                        <img class="carousel__image" src="/assets/img/gallery-story/facade-bistrot-1.1.jpg" alt="">
-                                    </li>
-                                    <li class="carousel__slide">
-                                        <img class="carousel__image" src="/assets/img/gallery-story/bistrot-Escalier-1.jpg" alt="">
-                                    </li>
-                                    <li class="carousel__slide">
-                                        <img class="carousel__image" src="/assets/img/gallery-story/bistrot-escalier-2.jpg" alt="">
-                                    </li>
-                                    <li class="carousel__slide">
-                                        <img class="carousel__image" src="/assets/img/gallery-story/bistrot-3.jpg" alt="">
-                                    </li>
-                                    <li class="carousel__slide">
-                                        <img class="carousel__image" src="/assets/img/gallery-story/bistrot-4.jpg" alt="">
-                                    </li>
-                                    <li class="carousel__slide">
-                                        <img class="carousel__image" src="/assets/img/gallery-story/balcon-bistrot-5.jpg" alt="">
-                                    </li>
-                                    <li class="carousel__slide">
-                                        <img class="carousel__image" src="/assets/img/gallery-story/Balcon-bistrot-6.jpg" alt="">
-                                    </li>
-                                </ul>
-                            </div>
-                            <button class="carousel__button carousel__button--right">
-                                <img src="/assets/img/icons/next-fill.png" alt="">
-                            </button>
-                            <div class="carousel__nav nav-bistrot">
-                                <button class="carousel__indicator current-slide"></button>
-                                <button class="carousel__indicator"></button>
-                                <button class="carousel__indicator"></button>
-                                <button class="carousel__indicator"></button>
-                                <button class="carousel__indicator"></button>
-                                <button class="carousel__indicator"></button>
-                                <button class="carousel__indicator"></button>
+                    <div class="story-col right-col">
+                        <div class="story-carousel carousel-wrap">
+                            <div class="carousel">
+                                <button class="carousel__button carousel__button--left is-hidden">
+                                    <img src="/assets/img/icons/previous-fill.png" alt="">
+                                </button>
+                                <div class="carousel__track-container">
+                                    <ul class="carousel__track">
+                                        <li class="carousel__slide current-slide">
+                                            <img class="carousel__image" src="/assets/img/gallery-story/facade-bistrot-1.1.jpg" alt="">
+                                        </li>
+                                        <li class="carousel__slide">
+                                            <img class="carousel__image" src="/assets/img/gallery-story/bistrot-Escalier-1.jpg" alt="">
+                                        </li>
+                                        <li class="carousel__slide">
+                                            <img class="carousel__image" src="/assets/img/gallery-story/bistrot-escalier-2.jpg" alt="">
+                                        </li>
+                                        <li class="carousel__slide">
+                                            <img class="carousel__image" src="/assets/img/gallery-story/bistrot-3.jpg" alt="">
+                                        </li>
+                                        <li class="carousel__slide">
+                                            <img class="carousel__image" src="/assets/img/gallery-story/bistrot-4.jpg" alt="">
+                                        </li>
+                                        <li class="carousel__slide">
+                                            <img class="carousel__image" src="/assets/img/gallery-story/balcon-bistrot-5.jpg" alt="">
+                                        </li>
+                                        <li class="carousel__slide">
+                                            <img class="carousel__image" src="/assets/img/gallery-story/Balcon-bistrot-6.jpg" alt="">
+                                        </li>
+                                    </ul>
+                                </div>
+                                <button class="carousel__button carousel__button--right">
+                                    <img src="/assets/img/icons/next-fill.png" alt="">
+                                </button>
+                                <div class="carousel__nav nav-bistrot">
+                                    <button class="carousel__indicator current-slide"></button>
+                                    <button class="carousel__indicator"></button>
+                                    <button class="carousel__indicator"></button>
+                                    <button class="carousel__indicator"></button>
+                                    <button class="carousel__indicator"></button>
+                                    <button class="carousel__indicator"></button>
+                                    <button class="carousel__indicator"></button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </article>
+            
+        </div>
+        <section class="bistrot-gallery">
+            <div class="beach-gallery_wrapper">
+                <img src="/assets/img/bar-bistrot.jpg" alt="">
+                <img src="/assets/img/Balcon-bistrot.jpg" alt="">
+                <img src="/assets/img/etage-bistrot.jpg" alt="">
+            </div>
+        </section>
+       
+        <section class="bistrot-highlight">
+            <div class="bistrot-info">
+                <h3>Horaires:</h3>
+                <p>Lundi au Dimanche 17h - 1h</p>
+                <a href="/assets/doc/Menu Kako's Bistrot - Bar à vins et Champagne-1.pdf" target="_blank" class="btn">Voir la carte</a>
+            </div>
+        </section>
+        <div class="position">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2877.467186009778!2d6.219275312060329!3d43.84614453980941!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12cbef43f21ba30d%3A0x47c4bd8f81aa7c9c!2sKAKO%20BISTROT!5e0!3m2!1sen!2sfr!4v1692981438384!5m2!1sen!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>      
+        </div>     
         <article class="bistrot-crumbs">
             <div class="crumb-title">
                 <h3>Nos autres expérience</h3>
