--- a/scss/pages/_bistrot.scss
+++ b/scss/pages/_bistrot.scss
@@ -8,75 +8,58 @@
 }
 
 .about-bistrot {
-    @extend %section;
-    padding: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     min-height: 30vh;
+    padding: 5rem;
+    
+    
     background-color: $grey;
     font-family: $main-font;
 }
 
-.about-content-bistrot{
+.about-content-bistrot {
 
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    width: 70vw;
-
+    align-items: start;
+    
+    width: 60vw;
     h2 {
         font-size: 2rem;
+        font-weight: 300;
+        position: relative;
+        margin-bottom: 3rem;
     }
 
-    p{
-        font-size: 1.2rem;
-        font-weight: 400;
-        color: $main-txt-dark;
-        margin: 1.2rem 0;
-        text-align: center;
-    }
-
-    .btn {
-        margin-top: 1rem;
+    h2:before {
+        content: "";
+        width: 6rem;
+        height: 2px;
+        background-color: $rose;
+        position: absolute;
+        top: 51%;
+        left: -110px;
     }
 }
 
-.bistrot-gallery {
-    @extend %section;
-    padding: 2rem;
-    background-color: $grey;
-
-}
-.bistrot-carousel {
-    height: 60vh;
-    width: 70vw;
-    
-}
-
-.bistrot-story {
-
-    @extend %section;
-    min-height: 50vh;
-    padding: 5rem;
-    background-color: $grey;
-    
-}
 .story-wrapper {
-
-    height: 40vh;
-    width: 80vw;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 15rem;
+    justify-content: space-between;
+    
 }
 
 .story-col {
-    width: 35%;
+    width: calc(49% - 1rem);
 }
 
 .left-col {
     display: flex;
     flex-flow: column wrap;
+    
     h3 {
         font-size: 2rem;
         margin-bottom: 1.5rem;
@@ -91,6 +74,38 @@
 .story-carousel {
     height: 30rem;
     
+}
+
+
+.bistrot-gallery {
+    @extend %section;
+    padding: 2rem;
+    background-color: $grey;
+
+}
+.bistrot-carousel {
+    height: 60vh;
+    width: 70vw;
+    
+}
+
+
+
+
+.bistrot-highlight {
+    @extend %section;
+    padding: 2rem;
+    background-color: $grey;
+
+}
+
+.bistrot-info {
+    width: 30vw;
+    padding: 1rem;
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    gap: 1rem;
 }
 
 .bistrot-crumbs {
