--- a/assets/view/kako-beach.html
+++ b/assets/view/kako-beach.html
@@ -48,8 +48,8 @@
                 <h2>Découvrez la sérénité et la splendeur du Lac de Sainte-Croix avec nos bateaux électriques, où l'aventure respectueuse de l'environnement rencontre la pure beauté naturelle.</h2>
                 <p>Plongez au cœur de la beauté sereine du Lac de Sainte-Croix, délicatement niché au sein des impressionnantes Gorges du Verdon. Nos bateaux électriques vous invitent à une exploration paisible et respectueuse de l'environnement, vous permettant de naviguer sur des eaux immaculées tout en admirant les paysages exceptionnels, le tout sans perturber l'harmonie naturelle.
                 </p>
-                <p>Soyez prêt(e) à être captivé(e) par les panoramas spectaculaires qui entourent le Lac de Sainte-Croix, le troisième plus grand lac de France. Les Gorges du Verdon, avec leurs falaises majestueuses et leur végétation luxuriante, offrent un décor à couper le souffle pendant que vous naviguez sur les eaux calmes. N'oubliez pas votre appareil photo – ces vues sont tout simplement trop impressionnantes pour ne pas les capturer.</p>
-                <p>*Nous sommes heureux de vous informer que les clientes de la Ferme Rose pourront profiter d'un tarif préférentiel exclusif lors de leur visite à Kako's Beach. Votre expérience est notre priorité, et nous sommes ravis de vous offrir cette offre spéciale pour rendre votre journée encore plus mémorable. À noter que nous n'acceptons pas de réservations.</p>
+                <p>Soyez prêt(e) à être captivé(e) par les panoramas spectaculaires qui entourent le troisième plus grand lac de France. Les Gorges du Verdon, avec leurs falaises majestueuses et leur végétation luxuriante, offrent un décor à couper le souffle pendant que vous naviguez sur les eaux calmes. N'oubliez pas votre appareil photo – ces vues sont tout simplement trop impressionnantes pour ne pas les capturer.</p>
+                <p class="about_msg">*Nous sommes heureux de vous informer que les clientes de la Ferme Rose pourront profiter d'un tarif préférentiel exclusif lors de leur visite à Kako's Beach. Votre expérience est notre priorité, et nous sommes ravis de vous offrir cette offre spéciale pour rendre votre journée encore plus mémorable. À noter que nous n'acceptons pas de réservations.</p>
             </div>
             <div class="beach-gallery_wrapper">
                 <img src="/assets/img/beach/beach-platform.JPG" alt="">
@@ -68,7 +68,7 @@
         <div class="position">
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11519.336188515206!2d6.2346029!3d43.7970565!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12cbef15b151f985%3A0x3e8d3304db8aa157!2sKAKO%20BEACH%20C%C3%B4t%C3%A9%20Verdon!5e0!3m2!1sen!2sfr!4v1692877955086!5m2!1sen!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>       
         </div>     
-        <article class="beach-crumbs">
+        <article class="crumbs beach-crumbs">
             <div class="crumb-title">
                 <h3>Nos autres expérience</h3>
             </div>
