--- a/assets/view/kako-bistrot.html
+++ b/assets/view/kako-bistrot.html
@@ -103,7 +103,7 @@
             
         </div>
         <section class="bistrot-gallery">
-            <div class="beach-gallery_wrapper">
+            <div class="bistrot-gallery_wrapper">
                 <img src="/assets/img/bar-bistrot.jpg" alt="">
                 <img src="/assets/img/Balcon-bistrot.jpg" alt="">
                 <img src="/assets/img/etage-bistrot.jpg" alt="">
@@ -120,7 +120,7 @@
         <div class="position">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2877.467186009778!2d6.219275312060329!3d43.84614453980941!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12cbef43f21ba30d%3A0x47c4bd8f81aa7c9c!2sKAKO%20BISTROT!5e0!3m2!1sen!2sfr!4v1692981438384!5m2!1sen!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>      
         </div>     
-        <article class="bistrot-crumbs">
+        <article class="crumbs bistrot-crumbs">
             <div class="crumb-title">
                 <h3>Nos autres expérience</h3>
             </div>
