--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,3 +1,48 @@
+.crumbs {
+    @extend %section;
+    padding-top: 2rem;
+}
+
+.crumb-title {
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    h3 {
+        font-size: 2rem;
+        font-weight: 300;
+    }
+
+}
+.crumb-links {
+    width: 100vw;
+    height: 10vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+    padding: 6rem;
+    
+    background-color: $grey;
+    h4 {
+        font-size: 1.5rem;
+        font-weight: 300;
+    }
+    p {
+        font-size: 1rem;
+        text-align: center;
+    }
+}
+
+@media (max-width: 450px) {
+    .crumb-title h3 {
+        font-size: 1.8rem;
+    }
+}
+
+
 footer{
     border-top: 1px solid $rose;
     background-color: $grey;
